docs(release): align integration docs for 1.0.0-rc1
Add package-level README and changelog files across supported integrations. Expand and align bilingual API, architecture, IME, and contribution documentation. Normalize package versions, terminology, release metadata, and package-safe documentation links.