@@ -1,83 +1,10 @@
-# Swing Platform API
+# Swing API
 
-This document maps to the current Swing implementation:
+For installation, requirements, build commands, runtime flags, and dependency coordinates, see the [Swing README](../../platform/Swing/sweeteditor/README.md).
 
-- Control layer: `platform/Swing/sweeteditor/src/main/java/com/qiplat/sweeteditor/SweetEditor.java`
-- Bridge layer: `platform/Swing/sweeteditor/src/main/java/com/qiplat/sweeteditor/core/EditorCore.java`
-- FFM layer: `platform/Swing/sweeteditor/src/main/java/com/qiplat/sweeteditor/core/EditorNative.java`
-- Document object: `platform/Swing/sweeteditor/src/main/java/com/qiplat/sweeteditor/core/Document.java`
+This reference describes the current public API in `platform/Swing/sweeteditor`.
 
-## Architecture Notes
-
-- Swing calls C API through Java FFM.
-- `EditorCore` handles upcall measure callbacks and binary payload decoding.
-- The current bridge protocol is binary payload.
-- `SweetEditor` provides semantic control APIs (enums) and handles Swing input events.
-
-## Quick Start
-
-### Environment Requirements (current repo configuration)
-
-- JDK: `22`
-- Gradle Wrapper: `8.10`
-- Runtime JVM flag: `--enable-native-access=ALL-UNNAMED`
-- The current demo setup enables `--enable-preview` for both compile and run
-
-### Run the Demo in this repository
-
-```bash
-cd platform/Swing
-./gradlew :demo:run
-```
-
-On Windows PowerShell:
-
-```powershell
-cd platform/Swing
-.\gradlew.bat :demo:run
-```
-
-### Integrate into an existing Java Swing project
-
-Recommended: use the Maven Central artifact:
-
-```gradle
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    implementation("com.qiplat:sweeteditor-swing:0.0.1")
-}
-```
-
-For Maven (`pom.xml`):
-
-```xml
-<dependency>
-    <groupId>com.qiplat</groupId>
-    <artifactId>sweeteditor-swing</artifactId>
-    <version>0.0.1</version>
-    <scope>compile</scope>
-</dependency>
-```
-> The repository module version is `0.0.1`. If you integrate from Maven Central, replace it with the release version you actually want to consume.
-
-Required JVM flag:
-
-```text
---enable-native-access=ALL-UNNAMED
-```
-
-If you use local source-module integration (for local debugging):
-
-```gradle
-dependencies {
-    implementation(project(":sweeteditor"))
-}
-```
-
-### Minimal Integration Example
+## Minimal Integration
 
 ```java
 import com.qiplat.sweeteditor.EditorTheme;
@@ -89,42 +16,48 @@ import javax.swing.SwingUtilities;
 
 SwingUtilities.invokeLater(() -> {
     JFrame frame = new JFrame("SweetEditor");
-    frame.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
-
     SweetEditor editor = new SweetEditor(EditorTheme.dark());
     editor.loadDocument(new Document("Hello, SweetEditor!"));
 
     frame.setContentPane(editor);
     frame.setSize(1000, 700);
-    frame.setLocationRelativeTo(null);
+    frame.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
     frame.setVisible(true);
 });
 ```
 
-### Notes
+Java 22 native access must be enabled at runtime. Native loading checks `sweeteditor.lib.path`, then extracts the matching bundled JAR resource, and finally falls back to `java.library.path` through `System.loadLibrary`.
 
-- `EditorNative` loads native library in order: `-Dsweeteditor.lib.path` -> source candidate directories -> native auto-extract from JAR -> `java.library.path`.
-- In Maven-release scenarios, you can optionally call `NativeLibraryExtractor.extractToDefaultDir()` before first editor use.
+## `SweetEditor`
 
-## Public Control Layer: `SweetEditor`
-
-### Constructor and Basics
+### Construction and Core Configuration
 
 ```java
 public SweetEditor()
 public SweetEditor(EditorTheme theme)
+
 public void loadDocument(Document document)
-public EditorTheme getEditorTheme()
+public Document getDocument()
+public EditorSettings getSettings()
+public EditorTheme getTheme()
 public void applyTheme(EditorTheme theme)
 public EditorCore getEditorCore()
+public EditorKeyMap getKeyMap()
+public void setKeyMap(EditorKeyMap keyMap)
+public void setLanguageConfiguration(LanguageConfiguration config)
+public LanguageConfiguration getLanguageConfiguration()
+public <T extends EditorMetadata> void setMetadata(T metadata)
+public <T extends EditorMetadata> T getMetadata()
+public void setEditorIconProvider(EditorIconProvider provider)
+public EditorIconProvider getEditorIconProvider()
+public void setPerfOverlayEnabled(boolean enabled)
+public boolean isPerfOverlayEnabled()
 public void flush()
 ```
 
-`flush()` is a force-refresh / diagnostic entrypoint. Normal edit, decoration, scroll, and selection paths dispatch `EditorActionResult` through the unified result path, and `needsRedraw` decides whether to refresh the render model and redraw; hosts usually do not need to call it after batched decoration updates.
+`flush()` forces a render-model refresh for diagnostics. Normal editing, scrolling, selection, provider, and decoration operations repaint automatically.
 
-### Edit / Line Actions / Undo Redo
-
-These are `SweetEditor` component methods. The underlying `EditorCore` calls return `EditorActionResult`, and the component dispatches those results internally.
+### Text Editing, Line Operations, and Clipboard
 
 ```java
 public void insertText(String text)
@@ -145,40 +78,126 @@ public void undo()
 public void redo()
 public boolean canUndo()
 public boolean canRedo()
+
+public void copyToClipboard()
+public void pasteFromClipboard()
+public void cutToClipboard()
 ```
 
-### Cursor Selection / Navigation / Appearance
+`applyTextEdits(...)` accepts non-overlapping edits in original-document coordinates and groups applied content changes into one undo operation.
+
+### Search and Replace
+
+```java
+public void search(SearchRequest request)
+public void findNextSearchMatch()
+public void findPreviousSearchMatch()
+public void replaceCurrentSearchMatch(String replacement)
+public void replaceAllSearchMatches(String replacement)
+public void clearSearch()
+public SearchState getSearchState()
+```
+
+`SearchOptions` supports case-sensitive, whole-word, regular-expression, wrap-around, and maximum-match settings. `SearchState` reports status, match count, current match, generation, and any error message.
+
+### Cursor, Selection, Navigation, and Geometry
 
 ```java
 public void selectAll()
 public String getSelectedText()
-public int[] getCursorPosition()
-public Document getDocument()
-public int[] getWordRangeAtCursor()
+public void setSelection(int startLine, int startColumn, int endLine, int endColumn)
+public TextRange getSelection()
+public void setCursorPosition(TextPosition position)
+public TextPosition getCursorPosition()
+public TextRange getWordRangeAtCursor()
 public String getWordAtCursor()
-public void setReadOnly(boolean readOnly)
-public boolean isReadOnly()
+
 public void gotoPosition(int line, int column)
+public void scrollToLine(int line, ScrollBehavior behavior)
 public void setScroll(float scrollX, float scrollY)
 public ScrollMetrics getScrollMetrics()
-public void setLineSpacing(float add, float mult)
-
-public void setFoldArrowMode(FoldArrowMode mode)
-public void setWrapMode(WrapMode mode)
-public void setAutoIndentMode(AutoIndentMode mode)
-public int getAutoIndentMode()
 public CursorRect getPositionRect(int line, int column)
 public CursorRect getCursorRect()
+public IntRange getVisibleLineRange()
+public int getTotalLineCount()
 ```
 
-### Language Config / Metadata / Extension Providers
+`getSelection()` returns `null` when there is no selection. `getLinkTargetAt(...)` and other string queries return an empty string when no value is available.
+
+### Styles, Decorations, and Folding
 
 ```java
-public void setLanguageConfiguration(LanguageConfiguration config)
-public LanguageConfiguration getLanguageConfiguration()
-public <T extends EditorMetadata> void setMetadata(T metadata)
-public <T extends EditorMetadata> T getMetadata()
+public void registerTextStyle(int styleId, int color, int bgColor, int fontStyle)
+public void registerTextStyle(int styleId, int color, int fontStyle)
+public void registerBatchTextStyles(Map<Integer, ? extends TextStyle> textStyles)
+public void setLineSpans(int line, SpanLayer layer, List<? extends StyleSpan> spans)
+public void setBatchLineSpans(SpanLayer layer, Map<Integer, ? extends List<? extends StyleSpan>> spansByLine)
 
+public void setLineInlayHints(int line, List<? extends InlayHint> hints)
+public void setBatchLineInlayHints(Map<Integer, ? extends List<? extends InlayHint>> hintsByLine)
+public void setLinePhantomTexts(int line, List<? extends PhantomText> phantoms)
+public void setBatchLinePhantomTexts(Map<Integer, ? extends List<? extends PhantomText>> phantomsByLine)
+public void setLineCodeLens(int line, List<? extends CodeLensItem> items)
+public void setBatchLineCodeLens(Map<Integer, ? extends List<? extends CodeLensItem>> itemsByLine)
+public void setLineLinks(int line, List<? extends LinkSpan> links)
+public void setBatchLineLinks(Map<Integer, ? extends List<? extends LinkSpan>> linksByLine)
+public String getLinkTargetAt(int line, int column)
+public void setLineDiagnostics(int line, List<? extends Diagnostic> items)
+public void setBatchLineDiagnostics(Map<Integer, ? extends List<? extends Diagnostic>> diagsByLine)
+public void setLineDocumentHighlights(int line, List<? extends DocumentHighlight> items)
+public void setBatchLineDocumentHighlights(Map<Integer, ? extends List<? extends DocumentHighlight>> highlightsByLine)
+public void setLineGutterIcons(int line, List<? extends GutterIcon> icons)
+public void setBatchLineGutterIcons(Map<Integer, ? extends List<? extends GutterIcon>> iconsByLine)
+
+public void setIndentGuides(List<? extends IndentGuide> guides)
+public void setBracketGuides(List<? extends BracketGuide> guides)
+public void setFlowGuides(List<? extends FlowGuide> guides)
+public void setSeparatorGuides(List<? extends SeparatorGuide> guides)
+
+public void setFoldRegions(List<? extends FoldRegion> regions)
+public void toggleFoldAt(int line)
+public void foldAt(int line)
+public void unfoldAt(int line)
+public void foldAll()
+public void unfoldAll()
+public boolean isLineVisible(int line)
+
+public void clearHighlights()
+public void clearHighlights(SpanLayer layer)
+public void clearInlayHints()
+public void clearPhantomTexts()
+public void clearGutterIcons()
+public void clearCodeLens()
+public void clearLinks()
+public void clearGuides()
+public void clearDiagnostics()
+public void clearDocumentHighlights()
+public void clearAllDecorations()
+```
+
+The component renders syntax, semantic, and overlay spans; inlay hints; phantom text; CodeLens; links; diagnostics; document highlights; gutter icons; fold regions; and indent, bracket, flow, and separator guides.
+
+### Snippets, Linked Editing, and Inline Suggestions
+
+```java
+public void insertSnippet(String snippetTemplate)
+public void startLinkedEditing(LinkedEditingModel model)
+public boolean isInLinkedEditing()
+public void linkedEditingNext()
+public void linkedEditingPrev()
+public void cancelLinkedEditing()
+
+public void showInlineSuggestion(InlineSuggestion suggestion)
+public void dismissInlineSuggestion()
+public boolean isInlineSuggestionShowing()
+public void setInlineSuggestionListener(InlineSuggestionListener listener)
+```
+
+Snippet insertion supports tab stops. While an inline suggestion is visible, Tab accepts it and Escape dismisses it.
+
+### Providers and Completion
+
+```java
 public void addNewLineActionProvider(NewLineActionProvider provider)
 public void removeNewLineActionProvider(NewLineActionProvider provider)
 
@@ -192,86 +211,94 @@ public void triggerCompletion()
 public void showCompletionItems(List<CompletionItem> items)
 public void dismissCompletion()
 public void setCompletionCellRenderer(CompletionCellRenderer renderer)
-public void setEditorIconProvider(EditorIconProvider provider)
-public EditorIconProvider getEditorIconProvider()
-public int[] getVisibleLineRange()
-public int getTotalLineCount()
+```
+
+- Completion providers receive invoked, trigger-character, or retrigger contexts and return results through a cancellable receiver. `CompletionItem.textEdit` defines the primary replacement range; `additionalTextEdits` use original-document coordinates. Snippet-format items enter snippet mode.
+- Decoration providers receive the visible range, accumulated text changes, language configuration, and editor metadata. They can return syntax, semantic, overlay, inlay, diagnostic, document-highlight, guide, fold, gutter-icon, phantom-text, CodeLens, and link data using merge, replace-all, or replace-range modes.
+- New-line action providers form a chain. The first provider that returns an action supplies the text inserted for Enter; returning `null` delegates to the next provider or the default editor behavior.
+
+### Event Bus
+
+```java
 public <T extends EditorEvent> void subscribe(Class<T> eventType, EditorEventListener<T> listener)
 public <T extends EditorEvent> void unsubscribe(Class<T> eventType, EditorEventListener<T> listener)
 ```
 
-### Styles / Decorations / Folding / Linked Editing
+The typed event bus publishes `TextChangedEvent`, `CursorChangedEvent`, `SelectionChangedEvent`, `ScrollChangedEvent`, `ScaleChangedEvent`, `DocumentLoadedEvent`, `LongPressEvent`, `DoubleTapEvent`, `ContextMenuEvent`, `InlayHintClickEvent`, `GutterIconClickEvent`, `FoldToggleEvent`, `CodeLensClickEvent`, and `LinkClickEvent`.
+
+## `EditorSettings`
+
+Access settings through `editor.getSettings()`.
 
 ```java
-public void registerTextStyle(int styleId, int color, int bgColor, int fontStyle)
-public void registerTextStyle(int styleId, int color, int fontStyle)
-public void registerBatchTextStyles(Map<Integer, ? extends TextStyle> textStyles)
-public void setLineSpans(int line, int layer, List<? extends StyleSpan> spans)
-public void setBatchLineSpans(int layer, Map<Integer, ? extends List<? extends StyleSpan>> spansByLine)
-
-public void setLineInlayHints(int line, List<? extends InlayHint> hints)
-public void setBatchLineInlayHints(Map<Integer, ? extends List<? extends InlayHint>> hintsByLine)
-public void setLinePhantomTexts(int line, List<? extends PhantomText> phantoms)
-public void setBatchLinePhantomTexts(Map<Integer, ? extends List<? extends PhantomText>> phantomsByLine)
-public void setLineCodeLens(int line, List<? extends CodeLensItem> items)
-public void setBatchLineCodeLens(Map<Integer, ? extends List<? extends CodeLensItem>> itemsByLine)
-public void clearCodeLens()
-public void setLineLinks(int line, List<? extends LinkSpan> links)
-public void setBatchLineLinks(Map<Integer, ? extends List<? extends LinkSpan>> linksByLine)
-public String getLinkTargetAt(int line, int column)
-public void clearLinks()
-
-public void setLineDiagnostics(int line, List<? extends Diagnostic> items)
-public void setBatchLineDiagnostics(Map<Integer, ? extends List<? extends Diagnostic>> diagsByLine)
-public void clearDiagnostics()
-
-public void setLineGutterIcons(int line, List<? extends GutterIcon> icons)
-public void setBatchLineGutterIcons(Map<Integer, ? extends List<? extends GutterIcon>> iconsByLine)
+public void setScale(float scale)
+public float getScale()
+public void setEditorTextSize(float textSize)
+public float getEditorTextSize()
+public void setFontFamily(String fontFamily)
+public String getFontFamily()
+public void setGutterVisible(boolean visible)
+public boolean isGutterVisible()
+public void setFoldArrowMode(FoldArrowMode mode)
+public FoldArrowMode getFoldArrowMode()
+public void setWrapMode(WrapMode mode)
+public WrapMode getWrapMode()
+public void setRenderWhitespace(WhitespaceRenderMode mode)
+public WhitespaceRenderMode getRenderWhitespace()
+public void setRenderLineBreaks(boolean enabled)
+public boolean isRenderLineBreaks()
+public void setLineSpacing(float add, float mult)
+public float getLineSpacingAdd()
+public float getLineSpacingMult()
+public void setContentStartPadding(float padding)
+public float getContentStartPadding()
+public void setShowSplitLine(boolean show)
+public boolean isShowSplitLine()
+public void setGutterSticky(boolean sticky)
+public boolean isGutterSticky()
+public void setCurrentLineRenderMode(CurrentLineRenderMode mode)
+public CurrentLineRenderMode getCurrentLineRenderMode()
+public void setAutoIndentMode(AutoIndentMode mode)
+public AutoIndentMode getAutoIndentMode()
+public void setBackspaceUnindent(boolean enabled)
+public boolean isBackspaceUnindent()
+public void setReadOnly(boolean readOnly)
+public boolean isReadOnly()
 public void setMaxGutterIcons(int count)
-public void clearGutterIcons()
-
-public void setIndentGuides(List<? extends IndentGuide> guides)
-public void setBracketGuides(List<? extends BracketGuide> guides)
-public void setFlowGuides(List<? extends FlowGuide> guides)
-public void setSeparatorGuides(List<? extends SeparatorGuide> guides)
-public void clearGuides()
-
-public void setFoldRegions(List<? extends FoldRegion> regions)
-public boolean toggleFold(int line)
-public void foldAll()
-public void unfoldAll()
-
-public void clearHighlights()
-public void clearHighlights(SpanLayer layer)
-public void clearInlayHints()
-public void clearPhantomTexts()
-public void clearAllDecorations()
-
-public EditorCore.EditorActionResult insertSnippet(String snippetTemplate)
-public void startLinkedEditing(LinkedEditingModel model)
-public boolean isInLinkedEditing()
-public boolean linkedEditingNext()
-public boolean linkedEditingPrev()
-public void cancelLinkedEditing()
+public int getMaxGutterIcons()
+public void setDecorationScrollRefreshMinIntervalMs(int intervalMs)
+public int getDecorationScrollRefreshMinIntervalMs()
+public void setDecorationOverscanViewportMultiplier(float multiplier)
+public float getDecorationOverscanViewportMultiplier()
+public void setCursorAnimationEnabled(boolean enabled)
+public boolean isCursorAnimationEnabled()
+public void setGutterAnimationEnabled(boolean enabled)
+public boolean isGutterAnimationEnabled()
 ```
 
-`CodeLensClickEvent` and `LinkClickEvent` are emitted through the generic `subscribe(...)` event bus. `getLinkTargetAt(...)` returns an empty string when no link matches the requested position.
+## Keymaps and Language Configuration
 
-## Bridge Layer Notes
+`EditorKeyMap.defaultKeyMap()`, `vscode()`, `jetbrains()`, and `sublime()` create built-in maps. Hosts can add or remove `KeyBinding` values and register shortcut handlers with `registerCommand(...)`.
 
-- `EditorCore` / `EditorNative` already include bracket highlight support:
-  - `setBracketPairs(int[] openChars, int[] closeChars)`
-  - `setMatchedBrackets(...)`
-  - `clearMatchedBrackets()`
-- Control layer usually sends bracket pairs through `setLanguageConfiguration(...)`.
-- `Document` currently exposes two read APIs: `getLineText(int)` and `getLineCount()`.
+Build `LanguageConfiguration` with `LanguageConfiguration.Builder`. It describes the language ID, bracket pairs, auto-closing pairs, line and block comments, tab size, and spaces-for-tabs preference. Bracket, auto-closing, and indentation settings are applied to editing behavior; the full configuration is also available to completion, decoration, and new-line providers.
 
 ## `Document`
 
 ```java
 public Document(String text)
+public Document(Path path)
+public Document(File file)
 public long getHandle()
 public String getLineText(int line)
 public int getLineCount()
-public void close()
+public String getText()
 ```
+
+`Document` releases its native handle through a `Cleaner`; it does not expose a public `close()` method.
+
+## Swing Input Behavior
+
+- Keyboard input uses the active `EditorKeyMap`; completion and inline suggestions intercept their navigation or confirmation keys before ordinary editor commands.
+- Mouse press, drag, hover, right-click, and wheel input drive selection, scrolling, links, CodeLens, gutter icons, folding, and context menus.
+- Clipboard operations use the AWT system clipboard.
+- Java input-method integration exposes preedit, commit, cancellation, caret geometry, surrounding text, and selected text through `InputMethodRequests`.
